--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" ,charset="UTF-8">
     <title>Geliştirici sitesi</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div id="menu">
+    <input type="checkbox" id="check">
+    <label for="check" id="ch">
+            <i class="fa fa-bars"></i>
+    </label>
     <a href="index.html">Makrow</a>
-    <a href="#anasyf">Anasayfa</a>
-    <a href="#icerik">İçerikler</a>
-    <a href="#hkmd">Hakkımda</a>
-    <div>
-        <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
-        <a href="http://twitter.com/" target="_blank"><i class="fa fa-twitter-square"></i></a>
-        <a href="https://github.com/" target="_blank"><i class="fa fa-github"></i></a>
-        <i class="fa fa-envelope" aria-hidden="true"></i>
-        <div></div>
-        <span>Mail adı</span>
-    </div>
+    <ul>
+        <li><a href="#anasyf">Anasayfa</a></li>
+        <li><a href="#icerik">İçerikler</a></li>
+        <li><a href="#hkmd">Hakkımda</a></li>
+        <div>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+            <a href="http://twitter.com/" target="_blank"><i class="fa fa-twitter-square"></i></a>
+            <a href="https://github.com/" target="_blank"><i class="fa fa-github"></i></a>
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+            <div></div>
+            <span>Mail adı</span>
+        </div>
+    </ul>
+    
 </div>
 <div id="anasyf">
 <h1>Merhaba, Ben Makrow</h1>
